app/assets/stylesheets/issues.css.scss
/*
 * Copyright 2013 Tasos Laskos <tasos.laskos@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

// Place all the styles related to the scans controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#issues {

    ul#issue-tabs {
        margin-bottom: 10px;
    }

    table.fixed  {
        table-layout: fixed;

        th {
            padding-top: 0px;
        }
        td.wrap {
            word-wrap: break-word;
            margin: 0;
        }

        tr.issue-type {
            td {
                border: 0px;
                padding: 0px;

                span.label {
                    cursor: pointer;
                    border-bottom-left-radius: 0;
                    border-bottom-right-radius: 0;
                    padding: 6px 6px !important;
                    width: 100%;
                    font-size: 14px !important;

                    a {
                        font-size: 11px;
                        color: white;
                        font-family: monospace;
                        text-decoration: none;
                    }

                    a:hover {
                        color: grey;
                    }
                }

                span.label:hover {
                    opacity: 0.7;
                    transition: all 0.2s ease-in-out;
                }
            }
        }

        tr.issue-group td {
            padding: 0;
            padding-bottom: 3px;
        }
    }

    table.issue-group {
        margin-bottom: 5px;

        .tooltip {
            position: fixed;
        }

        thead th {
            padding: 0;
        }
        tr td p.description {
            margin-bottom: 5px;
            padding: 5px;
            border-top: 0;
            border-top-left-radius: 0;
            border-top-right-radius: 0;
        }
        tr:first-child td, tr:nth-child(2) td {
            border: 0px;
        }
    }

    table.key-values {
        table th {
            text-align: right;
        }

        table th.top {
            text-align: center;
        }
    }

    table th.top {
        text-align: center;
        border-top: none;
    }

    table#parameters {
        tr:first-child{
            td, th {
                padding-top: 0;
                border-top: none;
            }
        }
    }

    #legend {

        ul {
            li.nav-header span {
                width: 100%;
                cursor: pointer;
            }

            li span.label {
                width: 100%;
                cursor: pointer;
                text-align: right;

                span.severity-name {
                    float: left;
                }
            }

            li span.label:hover {
                opacity: 0.7;
                transition: all 0.2s ease-in-out;
            }

            li:nth-child(n+3):nth-last-child(n+2) span.label {
                border-radius: 0px;
            }

            li:nth-child(n+2) span.label {
                border-top-left-radius: 3px;
                border-top-right-radius: 3px;
                border-bottom-left-radius: 0px;
                border-bottom-right-radius: 0px;
            }

            li:last-child span.label {
                border-top-left-radius: 0px;
                border-top-right-radius: 0px;
                border-bottom-left-radius: 3px;
                border-bottom-right-radius: 3px;
            }
        }
    }

    #response_body_container {
        overflow: scroll;
        height: 400px;
        position: relative;

        .proof {
            color: red;
            font-weight: bold;
        }
    }

    #rendered-response-container {
        width: 80%;
        height: 80%;
        margin-top: 40px;
        top: 10%;
        left: 30%;
    }

    #rendered-response-container .modal-body {
        width: 100%;
        height: 85%;
        max-height: none;
    }

    iframe.rendered-response {
        width: 100%;
        height: 100%;
        border:  none;
    }

    .repeat-request-btn {
        margin-top: 8px;
        margin-left: 10px;
    }

    .accordion-group {
        border: 0px;
        border-bottom: 1px solid #E5E5E5
    }

    .form-inputs {

        .help-block {
            clear: both;
            display: block;
        }

        label {
            display: inline;
            float: left;
            padding-right: 10px;
        }

        .checkbox, input {
            float: right;
        }

        #false-positive-report-nudge {
            display: none;
        }

        #issue_verification_steps {
            width: 97%;
            height: 250px;
        }

        #issue_remediation_steps {
            width: 97%;
            height: 250px;
        }
    }
}

